--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,6 +37,14 @@ rand = { version = "0.7", features = ["small_rng"] }
 crossbeam = "0.7.3"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+pyo3 = "0.23.3"
 
 [package.metadata.docs.rs]
 all-features = true
+
+[lib]
+name = "rust_poker"
+crate-type = ["cdylib"]
+
+[package.metadata.pyo3]
+extension-module = true
