--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,23 +1,19 @@
 [package]
-name = "rust_poker"
+name = "pyrust_poker"
 version = "0.1.14"
 authors = ["kmurf1999 <kwmurph2@asu.edu>"]
-repository = "https://github.com/kmurf1999/rust_poker"
+repository = "https://github.com/Townsheriff/python_rust_poker"
 description = "Rust poker library"
 license = "MIT"
 edition = "2018"
-keywords = ["poker"]
+keywords = ["poker", "python"]
 
 
 [badges]
-travis-ci = { repository = "kmurf1999/rust_poker" }
+travis-ci = { repository = "Townsheriff/python_rust_poker" }
 
 [workspace]
-members = [
-    "gen_eval_table",
-    "hand_indexer",
-    "read_write"
-]
+members = ["gen_eval_table", "hand_indexer", "read_write"]
 
 [features]
 # Option: enable hand_indexer
@@ -32,7 +28,7 @@ fastdivide = "0.2.0"
 # rust-embed = { version = "5.6.0", features = ["interpolate-folder-path"] }
 thiserror = "1.0.20"
 hand_indexer = { path = "hand_indexer", version = "0.1.2", optional = true }
-lazy_static =  "1.4.0"
+lazy_static = "1.4.0"
 rand = { version = "0.7", features = ["small_rng"] }
 crossbeam = "0.7.3"
 serde = { version = "1.0", features = ["derive"] }
@@ -43,7 +39,7 @@ pyo3 = "0.23.3"
 all-features = true
 
 [lib]
-name = "rust_poker"
+name = "pyrust_poker"
 crate-type = ["cdylib"]
 
 [package.metadata.pyo3]
