--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,5 +23,9 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.12"
-ipykernel = "^6.29.5"
 numpy = "^2.2.0"
+
+[tool.poetry.group.dev.dependencies]
+ipykernel = "^6.29.5"
+maturin = "^1.7.8"
+
