--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,6 +34,8 @@ crossbeam = "0.7.3"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 pyo3 = "0.23.3"
+phf = { version = "0.11.3", features = ["macros"] }
+
 
 [package.metadata.docs.rs]
 all-features = true
